src/test/deca/context/valid/SansObjet/Plus-readInt-float.deca
// Description:
//      using readInt in a plus operation
//
// Results:
//     nothing
//
// Historique:
//    cree le 14/01/2022

{
    float x =  readInt() + 3.0 ;
}
